# libgdrift3

./: CMakeLists.txt  README.md
data/: microsatellites_clean.txt  microsatellites_original.genepop  ms_01.genepop  project_1.json  project_A.json  project_B.json  project_D.json  settings_fixed.json  settings_scenario_a_f0.json  settings_scenario_b_f0.json  settings_test.json  simulation_10.json  simulation_A.json  simulation_Av4.json  simulation_B.json  simulation_Bv4.json  simulation_Dv4.json  target.txt
include/: Analizer.h  Analyzer.h  ClientReception.h  CommunicationUtils.h  Event.h  EventList.h  Individual.h  Model.h  ModelWF.h  ParsingUtils.h  Pool.h  Population.h  Profile.h  ProfileMarker.h  ResultsReader.h  ServerThreads.h  Simulator.h  SimulatorFactory.h  Statistics.h  StatusTable.h  WorkManager.h  WorkQueue.h
programs/: analizer.cpp  binomial_test.cpp  construction_test.cpp  full_test.cpp  generate_statistics.cpp  server.cpp  statistics_ms.cpp  threads_test.cpp  threads_test_serialized.cpp
src/: Analizer.cpp  Analyzer.cpp  ClientReception.cpp  CommunicationUtils.cpp  Event.cpp  EventList.cpp  Individual.cpp  Model.cpp  ModelWF.cpp  ParsingUtils.cpp  Pool.cpp  Population.cpp  Profile.cpp  ProfileMarker.cpp  ResultsReader.cpp  ServerThreads.cpp  Simulator.cpp  SimulatorFactory.cpp  Statistics.cpp  StatusTable.cpp  WorkManager.cpp  WorkQueue.cpp  construction_test.cpp  test.cpp
tests/: analizer.cpp  construction_test.cpp  distributions_comparison.cpp  full_test.cpp  generate_statistics.cpp  server.cpp  test_parallel.cpp  threads_test.cpp  threads_test_serialized.cpp
